[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
piston = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
rand = "*"
